# contextify

./: .gitattributes  .gitignore  CONTRIBUTIONS.md  Makefile  README.md  index.yaml
server/: alembic.ini  pyproject.toml
server/alembic/versions/: 202508072300-990bd8273f85_repo_owner.py  202508080841-79f522e90b2b_auth_token.py  50496cc07758_git_repo_provider.py  566512ad43db_processing_results.py  dc0ecd4e9102_repo_tokens.py
server/scripts/: test_website_crawler.py
server/scripts/examples/init_quickstart_data/: main.py
server/scripts/self_analysis/: main.py
server/src/dev_observer/: env_detection.py  log.py  settings.py
server/src/dev_observer/analysis/: langgraph_provider.py
server/src/dev_observer/common/: crypto.py  errors.py  schedule.py
server/src/dev_observer/flatten/: flatten.py
server/src/dev_observer/observations/: gcs.py  local.py  memory.py  provider.py  s3.py
server/src/dev_observer/processors/: aggregated_summary.py  code_research.py  flattening.py  git_changes.py  observations.py  periodic.py  repos.py  tokenized.py  websites.py
server/src/dev_observer/prompts/: langfuse.py  local.py  provider.py  stub.py
server/src/dev_observer/repository/: bitbucket.py  cloner.py  copying.py  delegating.py  federated.py  github.py  parser.py  provider.py  tokens.py  types.py  util.py
server/src/dev_observer/server/: detect.py  env.py  main.py
server/src/dev_observer/storage/: provider.py  single_blob.py
server/tests/dev_observer/: test_log.py
server/tests/dev_observer/common/: test_schedule.py
server/tests/dev_observer/processors/: test_observations.py
server/tests/devplan/repository/: test_parser.py
(+158 files in other folders)
