[project]
name = "dev-observer"
version = "0.1.0"
description = ""
authors = [
    { name = "Anton Safonov", email = "anton@devplan.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=1.0.8,<1.1.0)",
    "langgraph-checkpoint-postgres (>=3.0.3,<4.0.0)",
    "grpcio (>=1.71.0,<2.0.0)",
    "pydantic>=2.11.4,<3.0.0",
    "langchain-google-vertexai>=3.2.2,<4.0.0",
    "langfuse (>=3.14.1,<4.0.0)",
    "fastapi[all]>=0.115.12,<1",
    "load-dotenv >=0.1.0",
    "langchain>=1.2.10,<2.0.0",
    "langchain-community (>=0.4.1,<0.5.0)",
    "openai (>=2.20.0,<3.0.0)",
    "langchain-core (>=1.2.11,<2.0.0)",
    "langchain-openai (>=1.1.9,<2.0.0)",
    "pygithub >=2.6.1",
    "tiktoken >=0.7.0",
    "dotenv>=0.9.9",
    "colorama>=0.4.6",
    "pydantic-settings>=2.9.1",
    "langchain-groq>=1.1.2",
    "langchain-google-genai>=4.2.0",
    "python-dotenv>=1.1.0",
    "grpcio-tools>=1.71.0",
    "uvicorn>=0.34.2",
    "protobuf>=5.29.4",
    "alembic>=1.16.1",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.40",
    "clerk-backend-api>=4.2.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.2",
    "scrapy>=2.11.0",
    "beautifulsoup4>=4.13.4",
    "types-aiobotocore[essential]>=2.23.2",
    "aiobotocore>=2.23.2",
    "gcloud-aio-storage>=9.3.0",
    "cryptography>=45.0.0,<46.0.0",
    "python-multipart>=0.0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "grpcio-tools>=1.71.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]
